--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "Mikeal Rogers <mikeal.rogers@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/request/request.git"
+    "url": "https://github.com/DecisionFocus/request.git"
   },
   "bugs": {
     "url": "http://github.com/request/request/issues"
@@ -35,7 +35,7 @@
     "forever-agent": "~0.6.1",
     "form-data": "~2.3.2",
     "har-validator": "~5.1.3",
-    "http-signature": "~1.2.0",
+    "http-signature": "^1.3.6",
     "is-typedarray": "~1.0.0",
     "isstream": "~0.1.2",
     "json-stringify-safe": "~5.0.1",
